--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:management-cams-web": "node dist/management-cams-web/server/server.mjs"
+    "serve:ssr:management-cams-web": "node dist/management-cams-web/server/server.mjs",
+    "deploy": "ng build --configuration production && ngh --dir=dist/management-cams-web/browser --branch=production"
   },
   "private": true,
   "dependencies": {
@@ -21,9 +22,11 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "angular-cli-ghpages": "^2.0.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typeface-roboto": "^1.1.13",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
